--- a/package.json
+++ b/package.json
@@ -25,5 +25,6 @@
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-import": "^2.22.0",
     "nodemon": "^2.0.4"
-  }
+  },
+  "dependencies": {}
 }
